[project]
name = "comfyui-better-flow"
description = "Nodes for controlling workflow and reducing VRAM fingerprint."
version = "0.1.0"
license = { text = "MIT License" }
dependencies = []

[project.urls]
Repository = "https://github.com/lokinou/comfyui-better-flow"

[tool.comfy]
PublisherId = "lokinou"
DisplayName = "ComfyUI-Better-Flow"
Icon = ""
